--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <h1>About</h1>
                 <h2>Let me introduce myself.</h2>
                 <div>
-                    <img src="assets/1634372183937.jpg" alt="Profile Picture">
+                    <img src="assets/img_profile_myself.jpg" alt="Profile Picture">
                     <p class="lead">
                         An enthusiastic and dedicated individual who has a mature and responsible approach to situations, as a calm and professional person. <br>
                         I have great communication skills that enables me to work within a team environment, but I am also confident in working individually and remotely. <br> I have experience with vast aspects of the developmental process, this is through
@@ -78,7 +78,7 @@
         <div class="row button-separator">
             <div class="col-full">
                 <a href="mailto: mwilsonslider1234@outlook.com" " class="button">Contact Me</a>
-                <a href="assets/Morgan_Wilson-Slider_CV_24-08-2022.pdf" class="button button-cv">Open CV</a>
+                <a href="assets/Morgan_Wilson-Slider_CV.pdf" class="button button-cv">Open CV</a>
             </div>
         </div>
     </section>
