--- a/index.html
+++ b/index.html
@@ -1,270 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <body>
     <section>
-        <div class="row">
-            <div class="col-full">
-                <h1>About</h1>
-                <h2>Let me introduce myself.</h2>
-                <div>
-                    <img src="assets/img_profile_myself.jpg" alt="Profile Picture">
-                    <p class="lead">
-                        An enthusiastic and dedicated individual who has a mature and responsible approach to situations, as a calm and professional person. <br>
-                        I have great communication skills that enables me to work within a team environment, but I am also confident in working individually and remotely. <br> I have experience with vast aspects of the developmental process, this is through
-                        5+ years of experience. <br>
-                        I have learned a great deal with at designing, creating, and testing web-based applications.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="row about-content">
-            <div class="col- tab-full">
-                <h3>Profile</h3>
-                <p>My Personal Details Are:</p>
-                <ul class="info-list">
-                    <li>
-                        <strong>Fullname:</strong>
-                        <span>Morgan Wilson-Slider</span>
-                    </li>
-                    <li>
-                        <strong>Qualification:</strong>
-                        <span>BSc Computer and Information Security</span>
-                    </li>
-                    <li>
-                        <strong>Email</strong>
-                        <span>mwilsonslider1234@outlook.com</span>
-                    </li>
-                    <li>
-                        <strong>Github Repository</strong>
-                        <span>https://github.com/DigSwine?tab=repositories</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="row about-content">
-            <div class="col- tab-full">
-                <h3>Skills</h3>
-                <p>I can cover a full stack position, this is how confident I am in my abilities:</p>
-                <ul class="skill-bars">
-                    <li>
-                        <div class="progress percent75"><span>75%</span></div>
-                        <strong>Frontend</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent85"><span>85%</span></div>
-                        <strong>Backend</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent65"><span>65%</span></div>
-                        <strong>Databases</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent80"><span>80%</span></div>
-                        <strong>Security</strong>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="row button-separator">
-            <div class="col-full">
-                <a href="mailto: mwilsonslider1234@outlook.com" " class="button">Contact Me</a>
-                <a href="assets/Morgan_Wilson-Slider_CV.pdf" class="button button-cv">Open CV</a>
+        <div>
+            <div>
+                <a href="aboutme/aboutme.html">About me</a>
             </div>
         </div>
     </section>
 </body>
 </html>
-
-<style>
-    html {
-        font-family: sans-serif;
-        font-size: 75%;
-    }
-
-    body {
-        margin: 0;
-        width: 99%;
-    }
-
-    h1 {
-        font-size: 16px;
-        margin: 0.67em 0;
-    }
-
-    .intro-info img {
-        height: 9rem;
-        width: 9rem;
-        border-radius: 50%;
-        margin: .9rem 0 0 0;
-        float: left;
-    }
-
-    .intro-info .lead {
-        text-align: left;
-        padding-left: 13rem;
-    }
-
-    .about-content {
-        position: relative;
-        text-align: left;
-        max-width: 850px;
-        margin-bottom: 3.6rem;
-    }
-
-        .about-content h3 {
-            font-family: "poppins-bold", sans-serif;
-            font-size: 1.8rem;
-            text-transform: uppercase;
-            letter-spacing: .25rem;
-        }
-
-        /* Profile */
-        .about-content .info-list {
-            list-style: none;
-            margin-left: 0;
-        }
-
-            .about-content .info-list li strong {
-                font-family: "poppins-bold", sans-serif;
-                color: #313131;
-                text-transform: uppercase;
-                letter-spacing: .2rem;
-                font-size: 1.5rem;
-                line-height: 3rem;
-            }
-
-            .about-content .info-list li span {
-                display: block;
-                font-family: "poppins-regular", sans-serif;
-                color: #888888;
-                font-size: 1.5rem;
-                line-height: 1;
-                padding: 0 0 1.5rem 0;
-                margin-bottom: .6rem;
-            }
-
-    .row {
-        width: 94%;
-        max-width: 1140px;
-        margin: 0 auto;
-    }
-
-    /* Skills */
-    .skill-bars {
-        list-style: none;
-        margin: 6rem 0 3rem;
-    }
-
-        .skill-bars li {
-            height: .6rem;
-            background: #a1a1a1;
-            width: 100%;
-            margin-bottom: 6rem;
-            padding: 0;
-            position: relative;
-        }
-
-            .skill-bars li strong {
-                position: absolute;
-                left: 0;
-                top: -3rem;
-                font-family: "poppins-bold", sans-serif;
-                color: #313131;
-                text-transform: uppercase;
-                letter-spacing: .2rem;
-                font-size: 1.5rem;
-                line-height: 2.4rem;
-            }
-
-            .skill-bars li .progress {
-                background: #313131;
-                position: relative;
-                height: 100%;
-            }
-
-                .skill-bars li .progress span {
-                    position: absolute;
-                    right: 0;
-                    top: -3.6rem;
-                    display: block;
-                    font-family: "poppins-regular", sans-serif;
-                    color: white;
-                    font-size: 1.1rem;
-                    line-height: 1;
-                    background: #313131;
-                    padding: .6rem .6rem;
-                    border-radius: 3px;
-                }
-
-            .skill-bars li .percent65 {
-                width: 65%;
-            }
-
-            .skill-bars li .percent75 {
-                width: 75%;
-            }
-
-            .skill-bars li .percent85 {
-                width: 85%;
-            }
-
-            .skill-bars li .percent80 {
-                width: 80%;
-            }
-
-    /* col definitions and placements */
-    [class*="col-"] {
-        float: left;
-        width: 50%;
-    }
-
-    .col-full {
-        width: 100%;
-        text-align: center;
-    }
-
-    /* Buttons */
-    .button {
-        display: inline-block;
-        font-family: "poppins-bold", sans-serif;
-        font-size: 1.4rem;
-        text-transform: uppercase;
-        letter-spacing: .3rem;
-        height: 5.4rem;
-        line-height: 5.4rem;
-        padding: 0 3rem;
-        margin: 0 .3rem 1.2rem 0;
-        background: #d8d8d8;
-        color: #313131;
-        text-decoration: none;
-        cursor: pointer;
-        text-align: center;
-        white-space: nowrap;
-        border: none;
-        -moz-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        -webkit-transition: all 0.3s ease-in-out;
-        -ms-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-        width: 250px;
-    }
-
-        .button.button-cv {
-            background: #313131;
-            color: #FFFFFF;
-        }
-
-    .button-separator [class*="col-"] .button:first-child {
-        margin-right: 3%;
-    }
-</style>
