--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -77,8 +77,8 @@
     <section>
         <div class="row button-separator">
             <div class="col-full">
-                <a href="mailto: mwilsonslider1234@outlook.com" " class="button">Contact Me</a>
-                <a href="assets/Morgan_Wilson-Slider_CV.pdf" class="button button-cv">Open CV</a>
+                <a href="../mailto: mwilsonslider1234@outlook.com" " class="button">Contact Me</a>
+                <a href="../assets/Morgan_Wilson-Slider_CV.pdf" class="button button-cv">Open CV</a>
             </div>
         </div>
     </section>
