--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -77,7 +77,7 @@
     <section>
         <div class="row button-separator">
             <div class="col-full">
-                <a href="mailto: mwilsonslider1234@outlook.com" " class="button">Contact Me</a>
+                <a href="mailto: mwilsonslider1234@outlook.com" class="button">Contact Me</a>
                 <a href="../assets/Morgan_Wilson-Slider_CV.pdf" class="button button-cv">Open CV</a>
             </div>
         </div>
@@ -254,7 +254,6 @@
         -moz-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
         -webkit-transition: all 0.3s ease-in-out;
-        -ms-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         width: 250px;
     }
