personal details removal

--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
                                         <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
                                         <circle cx="12" cy="10" r="3" />
                                     </svg>
-                                    Algonquin Rd, Three Oaks Vintage, MI, 49128
                                 </div>
                                 <div class="card-contact">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -223,7 +222,7 @@
                                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                                         <path d="M22 6l-10 7L2 6" />
                                     </svg>
-                                    william@rocheald.com
+                                    Morgan@testing.com
                                 </div>
                                 <button class="contact-me">WORK TOGETHER</button>
                             </div>
