--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="displaycontent('experience'); displaycontent('contact'); displaycontent('about')">
     <section>
         <div class="video-container">
-            <video src="assets/vids/background.mp4" autoplay muted loop></video>
+            <video src="assets/vids/background0.mp4" autoplay muted loop></video>
         </div>
     </section>
 
